# kopsexample

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go  no_bindata_genrule.patch
bzl/: repositories.bzl
pkg/: BUILD.bazel  main.go
