load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/be9/kopsexample

# gazelle:resolve go k8s.io/kops/pkg/apis/kops @io_k8s_kops//pkg/apis/kops:go_default_library
gazelle(name = "gazelle")

# Useful commands:
#
# bazel run //:gazelle -- update-repos -from_file=go.mod -prune=true -build_file_proto_mode=disable_global -to_macro=bzl/repositories.bzl%go_repositories
